fixed skill icon size

--- a/index.html
+++ b/index.html
@@ -114,27 +114,27 @@
 
   <div id="skills" class=" skilled zone">
     <h2 id="scroll" class="zone"> Skills</h2>
-    <i class="devicon-html5-plain-wordmark colored"></i>
-    <i class="devicon-css3-plain-wordmark colored"></i>
-    <i class="devicon-sass-original colored"></i>
-    <i class="devicon-javascript-plain colored"></i>
-    <i class="devicon-jquery-plain-wordmark colored"></i>
-    <i class="devicon-atom-original-wordmark colored"></i>
-    <i class="devicon-git-plain-wordmark colored"></i>
-    <i class="devicon-react-original-wordmark colored"></i>
-    <i class="devicon-vuejs-plain-wordmark colored"></i>
-    <i class="devicon-ruby-plain-wordmark colored"></i>
-    <i class="devicon-rails-plain-wordmark colored"></i>
-    <img class="colored" src="images/icons8-database-export-100.png" alt="sql">
-    <i class="devicon-postgresql-plain-wordmark colored"></i>
-    <i class="devicon-heroku-plain-wordmark colored"></i>
-    <i class="devicon-babel-plain colored"></i>
-    <i class="devicon-nodejs-plain-wordmark colored"></i>
-    <i class="devicon-mongodb-plain-wordmark colored"></i>
-    <img src="images/icons8-graphql-100.png" alt="graphql">
-    <i class="devicon-meteor-plain-wordmark colored"></i>
-    <img class="colored" src="images/icons8-npm-100.png" alt="npm">
-    <img class="colored" src="images/icons8-ruby-gem-100.png" alt="gem">
+    <i class="devicon-html5-plain-wordmark colored skill"></i>
+    <i class="devicon-css3-plain-wordmark colored skill"></i>
+    <i class="devicon-sass-original colored skill"></i>
+    <i class="devicon-javascript-plain colored skill"></i>
+    <i class="devicon-jquery-plain-wordmark colored skill"></i>
+    <i class="devicon-atom-original-wordmark colored skill"></i>
+    <i class="devicon-git-plain-wordmark colored skill"></i>
+    <i class="devicon-react-original-wordmark colored skill"></i>
+    <i class="devicon-vuejs-plain-wordmark colored skill"></i>
+    <i class="devicon-ruby-plain-wordmark colored skill"></i>
+    <i class="devicon-rails-plain-wordmark colored skill"></i>
+    <i class="devicon-postgresql-plain-wordmark colored skill"></i>
+    <i class="devicon-heroku-plain-wordmark colored skill"></i>
+    <i class="devicon-babel-plain colored skill"></i>
+    <i class="devicon-nodejs-plain-wordmark colored skill"></i>
+    <i class="devicon-mongodb-plain-wordmark colored skill"></i>
+    <i class="devicon-meteor-plain-wordmark colored skill"></i><br/>
+    <img class="img-skill" src="images/icons8-graphql-100.png" alt="graphql">
+    <img class="img-skill" src="images/icons8-database-export-100.png" alt="sql">
+    <img class="img-skill" src="images/icons8-npm-100.png" alt="npm">
+    <img class="img-skill" src="images/icons8-ruby-gem-100.png" alt="gem">
   </div>
 
   <footer class="zone" id="contact">
