changed font size of about me section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p>A pro <span style="color:Chocolate">Event Planner</span>
         <br>
         Fond of hosting and organizing social gatherings and work events with utmost perfection and delight</p>
-      <p><span style="color:Chocolate">BEWARE!</span>My positivity and enthusiasm is contagious</p>
+      <p><span style="color:Chocolate">BEWARE!</span> My positivity and enthusiasm is contagious</p>
     </aside>
 
   </div>
@@ -130,7 +130,7 @@
     <i class="devicon-babel-plain colored skill"></i>
     <i class="devicon-nodejs-plain-wordmark colored skill"></i>
     <i class="devicon-mongodb-plain-wordmark colored skill"></i>
-    <i class="devicon-meteor-plain-wordmark colored skill"></i><br/>
+    <i class="devicon-meteor-plain-wordmark colored skill"></i>
     <img class="img-skill" src="images/icons8-graphql-100.png" alt="graphql">
     <img class="img-skill" src="images/icons8-database-export-100.png" alt="sql">
     <img class="img-skill" src="images/icons8-npm-100.png" alt="npm">
