added mouseover animation to the skill section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <div id="about" class="container parallax-window zone" data-parallax="scroll" data-image-src="images/SEI_Rashida.jpg">
     <main>
-      <h2 class="zone">Passion</h2>
+      <h2 class="animated-heading zone">Passion</h2>
       <p>I am passionate about building and designing creative and user-friendly web applications. My problem-solving skills, adaptability, reliability, and self-motivation towards work make me a unique individual.</p>
       <p>Enjoy working in a team developing innovative software solutions while working on the latest technologies.</p>
       <p>Have an eagerness to keep acquiring new skills and gain more knowledge.</p>
@@ -41,7 +41,7 @@
     </main>
 
     <aside>
-      <h2 class="zone">Hobbies</h2>
+      <h2 class="animated-heading zone">Hobbies</h2>
       <p>I have the <span style="color:Chocolate">travel</span> bug
         <br>
         Love to explore new places and people and their food and culture. It increases my knowledge and broadens my worldview and acceptance toward others
@@ -113,7 +113,7 @@
   </div>
 
   <div id="skills" class=" skilled zone">
-    <h2 id="scroll" class="zone"> Skills</h2>
+    <h2 id="scroll" class="animated-heading zone"> Skills</h2>
     <i class="devicon-html5-plain-wordmark colored skill"></i>
     <i class="devicon-css3-plain-wordmark colored skill"></i>
     <i class="devicon-sass-original colored skill"></i>
