altered mouseover animation

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
   </div>
 
-  <div class="zone blue grid-wrapper">
+  <div class="zone blue grid-wrapper" id="work">
 
-    <div class="card zone" id="work">
+    <div class="card zone">
       <img class="projectsimg" src="images/tictactoe.png" alt="Tic Tac Toe">
       <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/tic-tac-toe/" target="_blank">DEMO</a>
@@ -153,5 +153,6 @@
   <script src="js/jquery.js"></script>
   <script src="js/parallax.min.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
