changed work section images

--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
     <a id="scroll-contact" href="#contact">Contact Me <i class="fa fa-sms nav-icon"></i></a>
   </nav>
 
+  <!-- <nav class="zone sticky">
+    <ul class="main-nav">
+      <li><a id="scroll-about" href="#about">About Me <i class="fa fa-id-card nav-icon"></i></a></li>
+      <li><a id="scroll-work" href="#work">My Work <i class="fa fa-laptop-code nav-icon"></i></a></li>
+      <li><a id="scroll-skills" href="#skills">My Skills <i class="fa fa-file-code nav-icon"></i></a></li>
+      <li><a id="scroll-contact" href="#contact">Contact Me <i class="fa fa-sms nav-icon"></i></a></li>
+    </ul>
+  </nav> -->
+
   <header class="parallax-window zone" data-parallax="scroll" data-image-src="images/laptop-journal.jpg">
     <div class="coverText zone">
-      <h1>Rashida Bengali</h1>
+      <h1 class="animated fadeInDown">Rashida Bengali</h1>
       <h3>Full Stack Developer</h3>
     </div>
   </header>
@@ -42,14 +51,14 @@
 
     <aside>
       <h2 class="animated-heading zone">Hobbies</h2>
-      <p>I have the <span style="color:Chocolate">travel</span> bug
+      <p>I have the <span>travel</span> bug
         <br>
         Love to explore new places and people and their food and culture. It increases my knowledge and broadens my worldview and acceptance toward others
       </p>
-      <p>A pro <span style="color:Chocolate">Event Planner</span>
+      <p>A pro <span>Event Planner</span>
         <br>
         Fond of hosting and organizing social gatherings and work events with utmost perfection and delight</p>
-      <p><span style="color:Chocolate">BEWARE!</span> My positivity and enthusiasm is contagious</p>
+      <p><span>BEWARE!</span> My positivity and enthusiasm is contagious</p>
     </aside>
 
   </div>
@@ -57,56 +66,57 @@
   <div class="zone blue grid-wrapper" id="work">
 
     <div class="card zone">
-      <img class="projectsimg" src="images/tictactoe.png" alt="Tic Tac Toe">
+      <img class="projectsimg" src="images/laptopimg.png" alt="Tic Tac Toe">
       <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/tic-tac-toe/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/rashidabengali/tic-tac-toe" target="_blank">CODE</a>
-      </div>
-      <div class="text">
-        <h4>TIC TAC TOE</h4>
-        <p>A simple yet fun game to be played between two players. This game is built using <span>HTML5</span>, <span>CSS3</span>, <span>JavaScript</span> and <span>jQuery</span>
-          <br>
-          <br>
-          Play the traditional Paper Pencil Game in an absolutely attractive new way!</p>
+          <br><br>
+          <h4>TIC TAC TOE</h4>
+          <p>A simple yet fun game to be played between two players. This game is built using <span>HTML5</span>, <span>CSS3</span>, <span>JavaScript</span> and <span>jQuery</span>
+          <br><br>Play the traditional Paper Pencil Game in an absolutely attractive new way!</p>
       </div>
     </div>
 
     <div class="card zone">
-      <img class="projectsimg" src="images/home.png" alt="Restaurants on Rails">
+      <img class="projectsimg" src="images/laptop2.png" alt="Restaurants on Rails">
       <div class="overlay animated fadeInDown">
         <a class="zone" href="https://project1-rashida.herokuapp.com/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/rashidabengali/Project1" target="_blank">CODE</a>
-      </div>
-      <div class="text">
+        <br><br>
         <h4>Restaurants on Rails</h4>
         <p>It is the new age Restaurant Finder. This application is built using <span>Ruby on Rails</span>, <span>PostgreSQL</span> database connection and has been deployed on <span>Heroku</span>
           <br>
-          <br>
           Click the DEMO link to find out your favourite food place!</p>
       </div>
+      <!-- <div class="text">
+      </div> -->
     </div>
 
     <div class="card zone">
-      <img class="projectsimg" src="images/pamperhome.png" alt="Pamper My Pet">
+      <img class="projectsimg" src="images/laptop3.png" alt="Pamper My Pet">
       <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/pamper_my_pet/#/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/pandyapurvi/pet_shop_react" target="_blank">CODE</a>
-      </div>
-      <div class="text">
+        <br><br>
         <h4>PAMPER MY PET</h4>
+        <br>
         <p>An online shopping site for pet products. This E-Commerce web application uses mainly <span>ReactJS</span> Front-end and <span>Rails</span> Back-end with <span>PostgreSQL</span> as database and has been deployed on <span>Heroku</span></p>
       </div>
+      <!-- <div class="text">
+      </div> -->
     </div>
 
     <div class="card zone">
-      <img class="projectsimg" src="images/home 2.png" alt="Speed Type">
+      <img class="projectsimg" src="images/laptop4.png" alt="Speed Type">
       <div class="overlay animated fadeInDown">
         <a class="zone" href="https://rashidabengali.github.io/speed_type/#/" target="_blank">DEMO</a>
         <a class="zone" href="https://github.com/rashidabengali/speed_type" target="_blank">CODE</a>
-      </div>
-      <div class="text">
-        <h4>SPEED TYPE</h4>
-        <p>A game that will help improve your Typing Speed while making it immensely enjoyable for you to play. This game is built with <span>VueJS </span> as Front-end and <span>Firebase</span> as Back-end</p>
+        <!-- <div class="text"> -->
+          <br><br>
+          <h4>SPEED TYPE</h4>
+          <br>
+          <p>A game that will help improve your Typing Speed while making it immensely enjoyable for you to play. This game is built with <span>VueJS</span> as Front-end and <span>Firebase</span> as Back-end</p>
+        <!-- </div> -->
       </div>
     </div>
 
